database and prompt changes